--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -18,6 +18,7 @@ body {
     margin-bottom: auto;
     width: 400px;
     background-color: rgba(0, 0, 0, 0.5) !important;
+    background-attachment: fixed;
 }
 
 .social_icon span {
