--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -1,10 +1,11 @@
 html,
 body {
-    background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg');
+    background-image: url('./../img/back.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 100%;
     font-family: 'Numans', sans-serif;
+    background-attachment: fixed;
 }
 
 .container {
@@ -14,11 +15,10 @@ body {
 
 .card {
     height: 370px;
-    margin-top: auto;
+    margin-top: 17%;
     margin-bottom: auto;
     width: 400px;
     background-color: rgba(0, 0, 0, 0.5) !important;
-    background-attachment: fixed;
 }
 
 .social_icon span {
